auto increment in database and agence template

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -80,7 +80,7 @@
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-home"></span>  Agence <span class="caret"></span></h3></a>
 				<ul class="dropdown-menu">
-					<li><a href="#"> Liste des agences </a></li>
+					<li><a href="/agences"> Liste des agences </a></li>
 				</ul>
 			</li>
 
