add agence in database

--- a/views/agence.ejs
+++ b/views/agence.ejs
@@ -4,6 +4,19 @@
 	<head>
 		<% include header.ejs %>
 	</head>
+<body>
+
+  <h1>Ajouter agence</h1>
+  <!-- local host to be changed?  -->
+  <form action="/agences" method="POST">
+      Nom agence :
+      <input type="text" name="nom_agence" value="">
+      <br>
+      Adresse Agence :
+      <input type="text" name="adresse_agence" value="">
+      <br><br>
+      <input type="submit" value="Ajouter">
+  </form>
 
 <div class="container">
 
@@ -15,10 +28,12 @@
   <table  class = "table table-hover table-bordered text-center">
     <div class="text-center">
       <tr>
+      <th>id agence</th>
       <th>Nom agence</th>
+      <th>Adresse agence</th>
       </tr>
   </div>
-    <% rowsv.forEach(function(agences){ %>
+    <% rows.forEach(function(agences){ %>
       <tr>
         <td> <%=agences.idAgence%></td>
         <td> <%=agences.nom%></td>
@@ -34,3 +49,5 @@
       </tr>
       <%})%>
   </table>
+</body>
+</html>
