--- a/views/header.ejs
+++ b/views/header.ejs
@@ -89,7 +89,7 @@
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-screenshot"></span>  Parking <span class="caret"></span></h3></a>
 			<ul class="dropdown-menu">
-				<li><a href="#"> Liste des parkings </a></li>
+				<li><a href="/parking"> Liste des parkings </a></li>
 			</ul>
 		</li>
 	</ul>
