--- a/views/checkin.ejs
+++ b/views/checkin.ejs
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-
+	<script src="/css/bootstrap-datetimepicker.min.css"></script>
+	<script src="/bootstrap-datetimepicker.min.js"></script>
 
 
 	<script>
