--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -105,7 +105,7 @@
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3><span class="fa fa-user"></span> Mon Compte <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
 
-	            <li><a href="#">Contacter l'administrateur</a></li>
+	            <li><a href="mailto:admin@email.fr">Contacter l'administrateur</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="/logout">Se Deconnecter</a></li>
 
