--- a/views/parking.ejs
+++ b/views/parking.ejs
@@ -8,7 +8,7 @@
 
   <h1>Ajouter parking</h1>
   <!-- local host to be changed?  -->
-  <form action="/agences" method="POST">
+  <form action="/parking" method="POST">
       Nom parking :
       <input type="text" name="nom_parking" value="">
       <br>
@@ -22,7 +22,7 @@
 <div class="container">
 
   <div class="text-center">
-    <h1><span class="fa fa-home"></span> Liste des parking</h1>
+    <h1><span class="glyphicon glyphicon-screenshot"></span> Liste des parking</h1>
     <br>
   </div>
 
@@ -36,15 +36,13 @@
     <% rows.forEach(function(parking){ %>
       <tr>
         <td> <%=parking.idParking%></td>
-        <td> <%=parking.nom%></td>
+        <td> <%=parking.Nom%></td>
         <td>
           <p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
         </td>
         <td>
           <p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p>
         </td>
-
-
       </tr>
       <%})%>
   </table>
