--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,7 +50,7 @@
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="fa fa-road"></span>  Vehicule <span class="caret"></span></h3></a>
 	          <ul class="dropdown-menu">
-	            <li><a href="#">Liste des vehicules</a></li>
+	            <li><a href="/profile">Liste des vehicules</a></li>
 							<li role="separator" class="divider"></li>
 	            <li><a href="#">Recupérer</a></li>
 							<li role="separator" class="divider"></li>
